tests/ui/impl-trait/issues/issue-70971.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
  --> $DIR/issue-70971.rs:2:14
   |
LL |     let x : (impl Copy,) = (true,);
   |              ^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
